# py-template

./: .gitignore  .release-please-config.json  404.html  AGENT.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  setup-template.sh  sitemap.xml
.claude/skills/publish-setup/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  documentation.yml  feature_request.yml  refactor.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  release-please.yml
api/: index.html
dev/contributing/: index.html
dev/release/: index.html
docs/: api.md  index.md
docs/dev/: contributing.md  release.md
docs/guide/: install.md  usage.md
guide/install/: index.html
guide/usage/: index.html
scripts/: check_coverage.py  check_version_tag.py
search/: search_index.json
src/__pkg__/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
