[project]
name = "__PROJECT_NAME__"
version = "0.0.1"
description = "__PROJECT_DESCRIPTION__"
authors = [{ name = "__AUTHOR_NAME__", email = "__AUTHOR_EMAIL__" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/__GITHUB_ORG__/__PROJECT_NAME__"

[project.scripts]
__PROJECT_NAME__ = "__PKG__.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.15.0",
    "mypy>=1.11.0",
    "pyright>=1.1.400",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/__pkg__", "tests"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/__pkg__"]

# ---------------------------------------------------------------------------
# Type checking — mypy strict + pyright strict (parity with VS Code Pylance).
# Weakening any setting requires a documented rationale in the PR body.
# ---------------------------------------------------------------------------
[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
extra_checks = true
show_error_codes = true
ignore_missing_imports = true
disallow_any_unimported = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
    "possibly-undefined",
    "explicit-override",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportInvalidTypeVarUse = "error"
# typer registers commands via @app.command() — pyright can't see they are used.
reportUnusedFunction = "none"

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
    "--timeout-method=thread",
]
markers = [
    "unit: fast, isolated, pure-logic tests (default)",
    "integration: touches filesystem, subprocess, or local network",
    "slow: >1s tests; skippable via `-m 'not slow'`",
]

[tool.coverage.run]
source = ["src/__pkg__"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Lint + format — ruff with a broad rule selection. Tune per project.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731", "TRY003", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
